<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jw.nistgammadata.DisplayElementActivity">

    <TextView
        android:id="@+id/textViewIDElementName"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/text_view_elem_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="330dp"
        android:layout_height="390dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="110dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layoutElementInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layoutEnergy"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutAtten"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginStart="45dp"
                android:orientation="vertical">

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textViewEnergy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/string_EnergyMeV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPhotoelectric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/string_AttenTotal"
        app:layout_constraintStart_toEndOf="@+id/textViewEnergy"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
